Correction tablette

--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -324,7 +324,6 @@ a, .foot
 	width: 107%;
 	margin-left: -40px;
 	margin-top: -20px;
-	flex-wrap: wrap;
 }
 
 .photo4
