--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -1,41 +1,8 @@
-@media screen and (max-width: 800px)
+@media screen and (max-width: 500px)
 {
 	.long{
 		display: flex;
 		flex-direction: column;
 		margin-left: -80px;
-	}
-
-	.filtres{
-		font-size: 35px;
-		padding-bottom: 35px;
-		margin-left: 70px;
-	}
-
-	.tour {
-		font-size: 35px;
-		border-width: 5px;
-		margin-bottom: 30px;
-		margin-left: 60px;
-	}
-
-	.tour1{
-		width: 35%;
-
-	}
-
-	.tour2{
-		width: 30%;
-	}
-
-	.tour3{
-		width: 35%;
-	}
-
-	.tour4{
-		width: 45%;
-	}
-	.barrerecherche{
-		width: 40%;
 	}
 }
