--- a/CSS/tablette.css
+++ b/CSS/tablette.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1020px)
+@media screen and (max-width: 770px)
 {
 	.changefoot{
 		display: flex;
@@ -9,7 +9,7 @@
 		margin-top: 90px;
 	}
 	.margin, .gras{
-		font-size: 35px;
+		font-size: 25px;
 		margin-bottom: 30px;
 	}
 	.dimact{
@@ -19,7 +19,7 @@
 		margin-top: 25px;
 	}
 	.aub3{
-		font-size: 35px;
+		font-size: 25px;
 		margin-bottom: 20px;
 		margin-left: 40px;
 	}
@@ -30,10 +30,10 @@
 		margin: 40px;
 	}
 	.titreact{
-		font-size: 45px;
+		font-size: 35px;
 	}
 	.Afficherplus{
-		font-size: 40px;
+		font-size: 30px;
 	}
 	.photo4, .photo5{
 		width: 100%;
@@ -58,6 +58,7 @@
 	}
 	.pluspopu{
 		border-radius: 45px;
+		width: 100%;
 	}
 	.heberge{
 		background-color: white;
@@ -67,16 +68,16 @@
 		flex-direction: column;
 	}
 	.photo2{
-		width: 840px;
+		width: 109%;
 		height: 300px;
 		border-top-left-radius: 50px;
 		border-top-right-radius: 50px;
 	}
 	.aub2{
-		font-size: 35px;
+		font-size: 30px;
 	}
 	h2{
-		font-size: 30px;
+		font-size: 25px;
 	}
 	.fa-star, .stargrey
 	{
@@ -95,20 +96,21 @@
 	}
 	.marseille
 	{
-		font-size: 45px;
+		font-size: 35px;
 	}
 	.auberge{
-		width:850px;
+		width: 120%;
 		border-radius: 50px;
 		margin-bottom: 40px;
 		margin-top: 50px;
 	}
 	.pluspopulaire{
-		font-size: 45px;
+		font-size: 35px;
 		padding-top: 40px;
 	}
 	.fa-chart-line{
-		font-size: 50px;
+		font-size: 40px;
+		padding-top: 40px;
 	}
 	.logi{
 		font-size: 20px;
@@ -129,29 +131,53 @@
 		margin-left: -9px;
 	}
 	.fa-map-marker-alt{
-		font-size: 40px;
-		padding: 40px;
-		border-top-left-radius: 50px;
-		border-bottom-left-radius: 50px;
+		font-size: 29px;
+		padding: 31px;
+		border-top-left-radius: 25px;
+		border-bottom-left-radius: 25px;
 	}
 	.reche{
-		font-size: 40px;
-		border-radius: 50px;
-		padding: 38px;
+		font-size: 34px;
+		border-radius: 25px;
+		padding: 26px;
 
 	}
 	.tour {
 		font-size: 20px;
-		border-width: 5px;
+		border-width: 3px;
 		margin-bottom: 15px;
 		margin-left: 20px;
 	}
+
+	.tour1{
+		width: 37%;
+
+	}
+
+	.tour2{
+		width: 30%;
+	}
+
+	.tour3{
+		width: 35%;
+	}
+
+	.tour4{
+		width: 45%;
+	}
+	.barrerecherche{
+		width: 40%;
+	}
+	.filtres{
+		font-size: 25px;
+		margin-left: 20px;
+	}
 	.Recherche{
-		width: 84%;
-		height: 120px;
+		width: 80%;
+		height: 90px;
 		border-radius: 50px;
 		margin-top: 70px;
-		border-width: 4px;
+		border-width: 2px;
 		margin-bottom: 80px;
 		margin-left: 70px;
 	}
@@ -159,10 +185,10 @@
 		font-size: 50px;
 	}
 	.bonaligne{
-		font-size: 25px;
+		font-size: 30px;
 	}
 	.bonaligne2{
-		font-size: 14px;
+		font-size: 20px;
 	}
 	.logo1{
 		width: 250px;
@@ -176,16 +202,16 @@
 	}
 	.margehaut2{
 		margin-top: -160px;
-		font-size: 40px;
+		font-size: 31px;
 		margin-left: -270px;
 	}
 	.margehaut{
-		font-size: 40px;
+		font-size: 31px;
 		margin-bottom: 80px;
-		margin-left: -55px;
+		margin-left: -111px;
 	}
 	.margehaut3{
-		font-size: 40px;
+		font-size: 31px;
 		margin-bottom: 80px;
 		margin-left: -55px;
 	}
